<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".ui.main.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/vp_slider"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="45dp"
            android:src="@drawable/midas_chicklogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vp_slider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Protect your chicken!"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/bg_background"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="45dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bottom_nav_item"
                android:padding="10dp">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="27dp"
                    android:text="@string/scan"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/t1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/des_scan"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/scan_camera" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnList"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="45dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bottom_nav_item"
                android:padding="10dp">

                <TextView
                    android:id="@+id/t1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="27dp"
                    android:text="@string/info_penyakit"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/t1_1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/des_info"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/info_pnykt" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>